--- a/models/Untitled.ipynb
+++ b/models/Untitled.ipynb
@@ -115,9 +115,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "blpapi",
    "language": "python",
-   "name": "python3"
+   "name": "blpapi"
   },
   "language_info": {
    "codemirror_mode": {
