Updated helper utils

--- a/MarketEfficiencyComparison_AssetClass.ipynb
+++ b/MarketEfficiencyComparison_AssetClass.ipynb
@@ -80,20 +80,13 @@
       "Data import process completed.\n",
       "Feature engineering completed.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n"
-     ]
     }
    ],
    "source": [
     "from utils.helpers import *\n",
     "from utils.data_import_and_processing import *\n",
     "from utils.visualization import *\n",
-    "from utils.market_efficiency_tests import *\n",
+    "from utils.market_efficiency_tests import plot_autocorrelation\n",
     "\n",
     "index_prices, index_returns = fetch_and_save_data(tickers, start_date, end_date, index_prices_path, index_returns_path)\n",
     "lagged_targets = generate_lagged_returns_and_targets(index_returns)\n",
@@ -668,9 +661,6 @@
    },
    "outputs": [],
    "source": [
-    "import joblib\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score, precision_score, f1_score, roc_auc_score\n",
     "\n",
     "# Assuming the models are saved in the './models/' directory\n",
@@ -1257,8 +1247,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "3416db87-eaee-47ad-bd0e-031b0d03f61f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0d85c07e-5a98-4f82-80d5-4b272f850d66",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Scott Morgan\\\\Documents\\\\GitHub\\\\ml-market-efficiency'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32e5119c-fc55-4c41-8f52-8718b9f8a100",
    "metadata": {},
    "outputs": [],
    "source": []
